<?xml version="1.0"?>
<package format="3">
    <name>msg_process</name>
    <version>0.0.0</version>
    <description>The msg_process package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="fwy@todo.todo">fwy</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>

    <!--编译依赖-->
    <build_depend>rosidl_default_generators</build_depend>
    <!--执行依赖-->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <!--声明当前包所属的功能包组-->
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>ament_lint_auto</depend>
    <depend>ament_lint_common</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>