<?xml version="1.0"?>
<package format="3">
    <name>serial_process</name>
    <version>0.0.0</version>
    <description>The serial_process package</description>
    <maintainer email="fwy@todo.todo">fwy</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>msg_process</depend>
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
